v1.7.0: 新增效果插件系统、友情链接标签页，工作台交互打磨
- 新增 Effect 插件系统：PluginLoader 扫描 effects/*.jar 通过 ServiceLoader 自注册，build_plugin.bat 纯 ASCII 编译打包工具，CopyAndRenameEffect 示例插件
- 新增 LinkTab 友情链接标签页，分类展示原作官网/国内社区/日本社区资源
- Effect 接口增强：getAuthor/getVersion/validate 方法，WorkflowGraph 执行前校验+异常捕获，NodeComponent 错误状态显示（红色边框+⚠图标+tooltip）
- BOOLEAN 参数改用 JCheckBox，选中=true 未选=false
- 工作台支持 Delete 键快捷删除选中节点，NodeComponent 可获取键盘焦点，输入/输出文本区自动取消节点选择
- 版本号更新至 1.7.0，CLAUDE.md 同步更新项目文档